@@ -1,7 +1,11 @@
 #!/bin/bash
+JAVA_TOOL_OPTIONS_TMP=$JAVA_TOOL_OPTIONS
 echo "source env files..."
 source service.env
-MEM_OPTS="-XX:+UseContainerSupport -XX:InitialRAMPercentage=75.0 -XX:MaxRAMPercentage=75.0 -XX:MaxRAMPercentage=75.0 -XX:-UseAdaptiveSizePolicy"
+export JAVA_TOOL_OPTIONS="$JAVA_TOOL_OPTIONS $JAVA_TOOL_OPTIONS_TMP"
+
+MEM_OPTS="-XX:+UseContainerSupport -Xss512k -XX:MaxMetaspaceSize=500m -XX:CompressedClassSpaceSize=100m -XX:ReservedCodeCacheSize=400m -XX:-UseAdaptiveSizePolicy -XX:MaxGCPauseMillis=100"
+GC_LOG="-Xloggc:/data/workspace/$MS_NAME/jvm/gc-%t.log -XX:+PrintTenuringDistribution -XX:+PrintGCDetails -XX:+PrintGCDateStamps"
 API_PORT=80
 
 echo "create log dir"
@@ -12,7 +16,7 @@ ln -srfT "$ci_ms_log" logs
 ln -srfT "$ci_ms_data" data
 
 echo "create java args"
-java_env=() java_argv=() java_run="" JAVA_OPTS=${JAVA_TOOL_OPTIONS:-}
+java_env=() java_argv=() java_run=""
 java_env+=("CLASSPATH=$CLASSPATH")
 java_argv+=("-Dfatjar=/$MS_NAME/boot-$MS_NAME.jar") # 兼容fatjar文件名匹配进程.
 java_run="$MAIN_CLASS"
@@ -25,10 +29,14 @@ java_argv+=(
   "-Dbksvc=bk-ci-$MS_NAME"
   "-Dspring.cloud.kubernetes.config.sources[0].name=${RELEASE_NAME:-bkci}-${CHART_NAME:-bk-ci}-common"
   "-Dspring.cloud.kubernetes.config.sources[1].name=${RELEASE_NAME:-bkci}-${CHART_NAME:-bk-ci}-${MS_NAME}"
+  "-Dspring.main.allow-bean-definition-overriding=true"
+  "-Dspring.main.allow-circular-references=true"
   "-Dservice-suffix="
   "-Dspring.profiles.active=local,dev"
   "-Dspring.application.name=$MS_NAME"
+  "-Dspring.main.allow-circular-references=true"
+  "-Dspring.cloud.kubernetes.config.includeProfileSpecificSources=false"
 )
 
 echo "run java"
-java -server "${java_argv[@]}" $MEM_OPTS $JAVA_OPTS $java_run
+java -server "${java_argv[@]}" $MEM_OPTS $GC_LOG $java_run
